# CatalystGUI-Evo-3.0.4

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  Makefile  Makefile-prepend  QREncode.cmake  README.md  newguiyak.pro
src/: AddressProvider.cpp  AddressProvider.h  CommandLineParser.cpp  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  DnsLookup.cpp  DnsLookup.h  LoggerAdapter.cpp  NodeAdapter.cpp  NodeAdapter.h  PaymentServer.cpp  Settings.cpp  Settings.h  Update.cpp  Update.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  catalyst.desktop  cryptonotewallet.rc  default.qss  main.cpp  resources.qrc
src/gui/: AccountFrame.cpp  AccountFrame.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AddressBookModel.h  ChangeLanguageDialog.cpp  ChangeLanguageDialog.h  ConfirmSendDialog.cpp  ConfirmSendDialog.h  ConnectionSettings.cpp  ConnectionSettings.h  DepositDetailsDialog.cpp  DepositListModel.cpp  DepositListModel.h  DepositModel.cpp  DepositModel.h  DepositsFrame.cpp  DepositsFrame.h  ExportTrackingKeyDialog.cpp  ExportTrackingKeyDialog.h  ImportKeyDialog.cpp  ImportTrackingKeyDialog.cpp  ImportTrackingKeyDialog.h  InfoDialog.cpp  InfoDialog.h  MainWindow.cpp  MainWindow.h  MiningFrame.cpp  MiningFrame.h  MnemonicSeedDialog.cpp  MnemonicSeedDialog.h  NewAddressDialog.cpp  NewAddressDialog.h  NewNodeDialog.cpp  NewNodeDialog.h  NodeModel.cpp  NodeModel.h  (+38 more)
src/gui/ui/: aboutdialog.ui  accountframe.ui  confirmsenddialog.ui  connectionsettingsdialog.ui  exitwidget.ui  mainwindow.ui  overviewframe.ui
